That scroll bar has been added to it

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
             background-color: rgb(209, 218, 243);
             margin: auto;
             display: flex;
+            overflow: auto;
+            height: 70vh;
         }
 
         .container h1,
@@ -111,11 +113,12 @@
 
         div.output table {
             margin: 10px 23px;
-            width: 50vw;
+            width: 30vw;
             background-color: rgb(255, 255, 255);
             text-align: center;
             border: 2px solid black;
             font-size: 15px;
+            overflow: auto;
         }
 
         div.output table thead th {
