added that calculator link

--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@
       </div>
       <ul style="font-size: medium; width: max-content">
         <li><a href="index.html">Home</a></li>
-        <li><a href="https://github.com/Abhishek-Ranjan-16">Calculator</a></li>
+        <li>
+          <a href="https://2112016-6thsem-calcium.netlify.app/">Calculator</a>
+        </li>
         <li>
           <a href="https://abhishek-ranjan-16.github.io/rpg/"
             >Password Generator</a
