--- a/index.html
+++ b/index.html
@@ -5,138 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Buddy</title>
     <link rel="stylesheet" href="styles.css" />
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&family=Poppins:wght@600&display=swap");
-
-      * {
-        margin: 0;
-      }
-
-      nav {
-        font-family: "Noto Sans", sans-serif;
-        font-weight: 900;
-        display: flex;
-        font-size: 20px;
-        background-color: beige;
-        padding: 23px;
-        width: 85%;
-        margin: auto;
-      }
-
-      nav li a {
-        text-decoration: none;
-        color: navy;
-        transition: all;
-        transition-duration: 500ms;
-      }
-
-      nav li a:hover {
-        text-decoration: none;
-        color: rgb(196, 137, 49);
-      }
-
-      div.logo {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 0 23px;
-      }
-
-      nav ul li {
-        list-style: none;
-        padding: 5px 20px;
-        margin: 25px 10px;
-        border: 2px solid black;
-      }
-
-      nav ul {
-        display: flex;
-      }
-
-      .container {
-        min-height: 100vh;
-        font-family: "Poppins", sans-serif;
-        max-width: 80vw;
-        background-color: rgb(209, 218, 243);
-        margin: auto;
-        display: flex;
-        overflow: auto;
-        height: 70vh;
-      }
-
-      .container h1,
-      h2 {
-        margin: 10px 23px;
-      }
-
-      .container form {
-        margin: 10px;
-        display: flex;
-        flex-direction: column;
-      }
-
-      .container form label {
-        margin: 10px;
-        font-size: 25px;
-      }
-
-      .container form input[type="number"],
-      select {
-        margin: 10px;
-        width: 23vw;
-        background-color: rgb(219, 215, 245);
-        font-size: 25px;
-        margin-bottom: 23px;
-      }
-
-      .btn {
-        margin: 10px;
-        width: 144px;
-        padding: 5px 8px;
-        font-size: 20px;
-        font-weight: 800;
-        background-color: beige;
-        color: rgb(63, 36, 125);
-        border-radius: 13px;
-        cursor: pointer;
-        transition-timing-function: ease;
-        transition-duration: 1000ms;
-      }
-
-      .btn:hover {
-        color: white;
-        background-color: navy;
-        border-color: aliceblue;
-        border-radius: 10px;
-        border-width: 10px;
-      }
-
-      div.output table {
-        margin: 10px 23px;
-        width: 30vw;
-        background-color: rgb(255, 255, 255);
-        text-align: center;
-        border: 2px solid black;
-        font-size: 15px;
-        overflow: auto;
-      }
-
-      div.output table thead th {
-        font-size: 20px;
-      }
-
-      .output {
-        display: none;
-      }
-
-      .output table th {
-        padding: 23px;
-      }
-
-      footer {
-        text-align: center;
-      }
-    </style>
     <link rel="shortcut icon" href="dollar.ico" type="image/x-icon" />
   </head>
 
@@ -229,45 +97,33 @@
       </div>
     </div>
 
+    <div
+      class="indra"
+      style="
+        text-align: center;
+        color: white;
+        font-size: 20px;
+        font-family: Arial, Helvetica, sans-serif;
+        padding: 10px;
+        background-color: black;
+        width: 600px;
+        margin-left: auto;
+        margin-right: auto;
+      "
+    >
+      Click here to see
+      <a
+        href="http://bhaihuntera16.pythonanywhere.com/"
+        style="text-decoration: none; color: yellow"
+        >Indra</a
+      >
+      who tells my designing sense is poor.
+    </div>
     <footer
       style="padding: 20px; color: white; font-size: larger; font-weight: 600"
     >
       Copyright &copy; All rights reserved
     </footer>
     <script src="myfriend.js"></script>
-    <script>
-      const now = new Date();
-
-      const daysOfWeek = [
-        "Sunday",
-        "Monday",
-        "Tuesday",
-        "Wednesday",
-        "Thursday",
-        "Friday",
-        "Saturday",
-      ];
-      const month = [
-        "January",
-        "February",
-        "March",
-        "April",
-        "May",
-        "June",
-        "July",
-        "August",
-        "September",
-        "October",
-        "November",
-        "December",
-      ];
-
-      const dayOfWeek = daysOfWeek[now.getDay()];
-      document.getElementById("week").innerHTML = dayOfWeek;
-      document.getElementById("date").innerHTML = now.getDate();
-      document.getElementById("month-year").innerText = `${
-        month[now.getMonth()]
-      }, ${now.getFullYear()}`;
-    </script>
   </body>
 </html>
