--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
         margin-right: auto;
       "
     >
-      Click here to see
+      Meet my
       <a
         href="http://bhaihuntera16.pythonanywhere.com/"
         style="text-decoration: none; color: yellow"
-        >Indra</a
+        >friends</a
       >
       who tells my designing sense is poor.
     </div>
