changed some links, updated them

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         <img src="currency.svg" alt="" srcset="" width="300" height="90" />
       </div>
       <ul style="font-size: medium; width: max-content">
-        <li><a href="index.html">Home</a></li>
         <li>
           <a href="https://2112016-6thsem-calcium.netlify.app/">Calculator</a>
+        </li>
+        <li>
+          <a href="https://expense-tracker-6f514.web.app/">Expense Tracker</a>
         </li>
         <li>
           <a href="https://abhishek-ranjan-16.github.io/rpg/"
@@ -24,18 +26,12 @@
           >
         </li>
         <li>
-          <a href="https://front-end-passop.vercel.app/"
-            >Local Password Manager</a
-          >
+          <a href="https://pass-manager-d358a.web.app/">Password Manager</a>
         </li>
         <li><a href="https://todo-frontend-ochre.vercel.app/">Todo List</a></li>
         <li>
-          <a href="https://abhishek-ranjan-16.github.io/Portfolio/">About Us</a>
-        </li>
-        <li>
           <a href="https://www.linkedin.com/in/2112016-ranjan/">Contact</a>
         </li>
-        <!-- <li><a href="mailto:abhiran14082002@gmail.com">Contact</a></li> -->
       </ul>
     </nav>
     <div class="container">
